calculate spacing fix

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -53,7 +53,7 @@ td {
 }
 
 .customButton {
-    margin: 5% 0 7% 0;
+    margin: 5% 0 6% 0;
 }
 
 /* results */
